--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
     <div class="container">
         <div class="image-container">
             <!-- Inserta tu imagen aquí -->
-            <img src="file:///C:/Users/a_alj/Pictures/photo_2024-11-28_10-41-13.jpg" alt="Imagen de la relación">
+            <img src="https://sites.google.com/view/
+jeangaby2505" alt="Imagen de la relación">
             
         </div>
 
