--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
     <div class="container">
         <div class="image-container">
             <!-- Inserta tu imagen aquí -->
-            <img src="https://sites.google.com/view/
-jeangaby2505" alt="Imagen de la relación">
+            <img src="hhttps://subir-imagen.com/images/2024/12/18/photo_2024-11-28_10-41-13.jpeg" alt="Imagen de la relación">
             
         </div>
 
